-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Some future release
-
b44670e671594befb5af1b42b00eb75c3bb55b07
In example of source code at page http://doc.qt.nokia.com/4.6/network-fortuneclient-main-cpp.html written «return client.exec();» instead of «return app.exec();»
| For Gerrit Dashboard: QTBUG-25571 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 32739,1 | Doc: Fix broken return codes for a few examples | master | qt/qtbase | Status: MERGED | +2 | 0 |