Doc: Fix broken return codes for a few examples

This reverts remnants of 79747d38987ce42adc510be0c5bb1565f55fd3d6.

Task-number: QTBUG-25571
Change-Id: I1dbf64cfcba889fb0c70ceaeeeffad8334a8aab1
Reviewed-by: Casper van Donderen <casper.vandonderen@nokia.com>

cregit: b44670e671594befb5af1b42b00eb75c3bb55b07 https://github.com/qt/qtbase/commit/b44670e671594befb5af1b42b00eb75c3bb55b07