examples/network/fortuneserver/main.cpp
@@ -73,7 +73,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 return|return
-name|server
+name|app
 operator|.
 name|exec
 argument_list|()
