examples/network/multicastsender/main.cpp
@@ -43,7 +43,7 @@ name|show
 argument_list|()
 expr_stmt|;
 return|return
-name|sender
+name|app
 operator|.
 name|exec
 argument_list|()
