examples/tools/regexp/main.cpp
@@ -43,7 +43,7 @@ name|show
 argument_list|()
 expr_stmt|;
 return|return
-name|dialog
+name|app
 operator|.
 name|exec
 argument_list|()
